--- a/Lukandah/View/HotellistViewCell.xib
+++ b/Lukandah/View/HotellistViewCell.xib
@@ -1,64 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HotellistViewCell" rowHeight="171" id="DDt-0v-C5j" customClass="HotellistViewCell" customModule="Lukandah" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="470" height="171"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HotellistViewCell" rowHeight="168" id="DDt-0v-C5j" customClass="HotellistViewCell" customModule="Lukandah" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="494" height="168"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DDt-0v-C5j" id="azm-zt-ulX">
-                <rect key="frame" x="0.0" y="0.0" width="470" height="171"/>
+                <rect key="frame" x="0.0" y="0.0" width="494" height="168"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O5o-I2-zei">
-                        <rect key="frame" x="20" y="0.0" width="430" height="163"/>
+                        <rect key="frame" x="20" y="0.0" width="454" height="160"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_dummy" translatesAutoresizingMaskIntoConstraints="NO" id="evT-Wa-UyM">
-                                <rect key="frame" x="0.0" y="0.0" width="129" height="163"/>
+                                <rect key="frame" x="0.0" y="0.0" width="136" height="160"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_hotel" translatesAutoresizingMaskIntoConstraints="NO" id="1im-6l-mco">
-                                <rect key="frame" x="149" y="14" width="20" height="20"/>
+                                <rect key="frame" x="156" y="14" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="mla-2V-Efo"/>
                                     <constraint firstAttribute="height" constant="20" id="pdI-ai-DsZ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maldives Hotel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbw-cG-Fch">
-                                <rect key="frame" x="175" y="13.5" width="117.5" height="21"/>
+                                <rect key="frame" x="182" y="13.5" width="117.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.5/85 Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqS-Zt-4fe">
-                                <rect key="frame" x="175" y="38.5" width="73.5" height="12"/>
+                                <rect key="frame" x="182" y="38.5" width="73.5" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_rating" translatesAutoresizingMaskIntoConstraints="NO" id="RGx-xv-CaZ">
-                                <rect key="frame" x="175" y="54.5" width="30" height="7"/>
+                                <rect key="frame" x="182" y="54.5" width="30" height="7"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_locationblack" translatesAutoresizingMaskIntoConstraints="NO" id="19I-2y-v3a">
-                                <rect key="frame" x="149" y="123" width="20" height="20"/>
+                                <rect key="frame" x="156" y="120" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="ELx-Sg-Rb2"/>
                                     <constraint firstAttribute="height" constant="20" id="afO-9u-15x"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ispum" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sJ-bD-EFh">
-                                <rect key="frame" x="175" y="124" width="88.5" height="18"/>
+                                <rect key="frame" x="182" y="121" width="88.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$200/Night" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ThD-i2-SQL">
-                                <rect key="frame" x="342" y="124" width="82" height="18"/>
+                                <rect key="frame" x="366" y="121" width="82" height="18"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -99,7 +100,7 @@
                     <constraint firstAttribute="bottom" secondItem="O5o-I2-zei" secondAttribute="bottom" constant="8" id="xDd-hW-Afm"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="10.144927536231885" y="-109.48660714285714"/>
+            <point key="canvasLocation" x="27.536231884057973" y="-108.48214285714285"/>
         </tableViewCell>
     </objects>
     <resources>
